# BeltTentioner

./: .gitignore  README.md  belttentiontest.sln  publish.ps1  temp_mainwindow_dump.txt
BeltAPI/: Axis.cs  BeltMotorData.cs  BeltSerialDevice.cs  CarSettings.cs  MotorOutputValues.cs  MotorSettings.cs  Rotation.cs  SerialCommunicator.cs
BeltTensionTest.WPF/: App.xaml  App.xaml.cs  BeltTensionTest.WPF.csproj  GlobalUsings.cs
BeltTentionerExample/: BeltTentionerExample.csproj  Program.cs  TestState.cs
BeltTentionerWPF/: App.xaml  App.xaml.cs  BeltTentionerWPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
MonoXR/: .gitignore  MonoXR.sln  README.md  build-layer.ps1  install-layer.ps1
MonoXR/layer/: CMakeLists.txt
MonoXR/layer/cmake/: GenManifest.cmake
MonoXR/layer/manifest/: MonoXR.json.in
MonoXR/layer/src/: layer.cpp
SharedResources/: TelemetrySharedData.cs
Sim_Hub_Plugin/: DataPluginDemo.cs  DataPluginDemoSettings.cs  SIMHUB_Plugin.csproj  SettingsControlDemo.xaml  SettingsControlDemo.xaml.cs  TelemetryMmfReader.cs  TelemetryMmfWriter.cs  TelemetrySharedData.cs
belttentiontest/: AboutBox.Designer.cs  AboutBox.cs  App.config  AssemblyInfoFromAbout.cs  BelthMath.cs  BrushUtils.cs  CarSettings.cs  CarSettingsDatabase.cs  CrashLogger.cs  DebugLogForm.cs  FlashNanoForm.cs  Form1.Designer.cs  Form1.cs  Form1.resx  IracingCommunicator.cs  MemoryMapFile.cs  MemoryMapFileWriter.cs  NumericUpDownGForce.cs  NumericUpDownPercentage.cs  Program.cs  SerialCommunicator.cs  TelemetryMmfReader.cs  TelemetrySharedData.cs  TestingForm.Designer.cs  TestingForm.cs  Updater.cs  (+5 more)
(+110 files in other folders)
